--- a/src/main/java/com/iwant/test/ListViewAppController.fxml
+++ b/src/main/java/com/iwant/test/ListViewAppController.fxml
@@ -1,22 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.jfoenix.controls.JFXListView?>
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.ListView?>
 <?import javafx.scene.layout.BorderPane?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity"
-	minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0"
-	prefWidth="600.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1"
-	fx:controller="com.iwant.test.ListViewAppController">
-	<center>
-		<ListView id="listview" fx:id="listview"
-			BorderPane.alignment="CENTER">
-			<opaqueInsets>
-				<Insets />
-			</opaqueInsets>
-			<BorderPane.margin>
-				<Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-			</BorderPane.margin>
-		</ListView>
-	</center>
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.iwant.test.ListViewAppController">
+   <center>
+      <JFXListView id="listview" fx:id="listview" BorderPane.alignment="CENTER">
+         <BorderPane.margin>
+            <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+         </BorderPane.margin>
+      </JFXListView>
+   </center>
 </BorderPane>
